--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
+__docs__/
 *.py[cod]
 *$py.class
 
@@ -34,6 +35,7 @@ MANIFEST
 *.spec
 #configuracion del programa
 config.txt
+*.pdf
 
 # Installer logs
 pip-log.txt
